--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,6 +2,8 @@
 
 .home {
 
+  margin-top: 95px;
+
   .intro {
 
     h2 {
