--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,10 +1,15 @@
 // Navigation code here
 
 .full-header {
+    position:fixed;
+    width: 100%;
+    opacity: 0.95;
     background: @wild-sand;
-    display:flex;
-    justify-content: center;
-    padding-bottom: 5px;
+    z-index: 9999;
+    height: 95px;
+    top:0;
+
+
 
     .h1-nav {
         display: flex;
@@ -31,3 +36,4 @@
         }
     }
 }
+
